# OpenFantasyWorld

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: FindGLFW3.cmake  FindGLM.cmake  FindOpenALSoft.cmake
docs/: Doxyfile  GUIDE.md
include/: camera.hpp  entity.hpp  init.hpp  mouse.hpp  texture.hpp
include/assets/: model.hpp  shader.hpp
include/components/: camera_holder.hpp  component.hpp  i_component.hpp  jump_component.hpp  player_component.hpp  ui_component.hpp
include/components/physics/: constant_rotation_component.hpp  movement_component.hpp  rigid_body.hpp  transform_component.hpp
include/components/render/: mesh.hpp  render_component.hpp  rendercomponent.hpp
include/render/: mesh.hpp
include/systems/: constant_rotation_system.hpp  input_system.hpp  jump_system.hpp  mesh_rendering_system.hpp  movement_system.hpp  rigid_body_system.hpp  ui_system.hpp
resources/shaders/: frag_shader.glsl  vert_shader.glsl
src/: camera.cpp  client.cpp  entity.cpp  init.cpp  main.cpp  mouse.cpp  server.cpp  texture.cpp
src/assets/: model.cpp  shader.cpp  texture.cpp
src/components/: camera_holder.cpp  component.cpp  jump_component.cpp  player_component.cpp
src/components/physics/: constant_rotation_component.cpp  movement_component.cpp  ridig_body.cpp  rigid_body.cpp  transform_component.cpp
src/components/render/: mesh.cpp  render_component.cpp  rendercomponent.cpp
src/networking/: client_socket.cpp  client_socket.hpp  server_socket.cpp  server_socket.hpp
src/render/: mesh.cpp
src/systems/: constant_rotation_system.cpp  input_system.cpp  jump_system.cpp  mesh_rendering_system.cpp  movement_system.cpp  rigid_body_system.cpp
